--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.QuickGlance"
         tools:targetApi="31">
         <activity
+            android:name=".Credentials_Activity"
+            android:exported="false" />
+        <activity
             android:name=".OTP_Activity"
             android:exported="false" />
         <activity
