--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,12 +27,18 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/quickglance_logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/quickglance_logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.QuickGlance"
         tools:targetApi="31">
+        <activity
+            android:name=".View_Snaps"
+            android:exported="false" />
+        <activity
+            android:name=".Select_Senders_Snap"
+            android:exported="false" />
         <activity
             android:name=".accept_friends_activity"
             android:exported="false" />
