--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,9 @@
         android:theme="@style/Theme.QuickGlance"
         tools:targetApi="31">
         <activity
+            android:name=".View_Stories"
+            android:exported="false" />
+        <activity
             android:name=".Memories_Activity"
             android:exported="false" />
         <activity
